# IDFTestProject

./: .gitignore  README.md  compose.yml  pyproject.toml
clickhouse/sql/: creation.sql
dags/: astros_api_topostgres_dag.py  count_validation_dag.py
dags/sql/: create_table.sql
dbt/: .user.yml
dbt/astros_clickhouse/: dbt_project.yml  profiles.yml
dbt/astros_clickhouse/models/: sources.yml
dbt/astros_clickhouse/models/marts/: dim_astronauts.sql
dbt/astros_clickhouse/models/staging/: schema.yml  stg_astros.sql
